# kiss-templates

./: .appveyor.yml  .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md  pre-commit
examples/: CMakeLists.txt
examples/0_hello_world/: CMakeLists.txt  hello_world.kiste  hello_world.kt  test.cpp
examples/1_functions/: CMakeLists.txt  functions.kiste  functions.kt  test.cpp
examples/2_cpp/: CMakeLists.txt  sample.kiste  sample.kt  test.cpp
examples/3_inheritance/: CMakeLists.txt  child.kiste  grand_child.kiste  parent.kiste  parent.kt  test.cpp
examples/4_composition/: CMakeLists.txt  helper.kiste  helper.kt  sample.kiste  test.cpp
examples/5_html/: CMakeLists.txt  sample.kiste  test.cpp
examples/6_exceptions/: CMakeLists.txt  sample.kiste  test.cpp
examples/7_policies/: CMakeLists.txt  sample.kiste  test.cpp
include/: CMakeLists.txt  kiste.h
include/kiste/: cpp.h  html.h  kiste.h  raw.h  raw_type.h  serializer_builder.h  terminal.h
src/: CMakeLists.txt  ClassTemplate.h  ClassTemplate.kiste  KisteTemplate.h  KisteTemplate.kiste  LineTemplate.h  LineTemplate.kiste  command_type.h  kiste2cpp.cpp  line.cpp  line.h  line_type.h  parse_context.cpp  parse_context.h  segment_type.h
src/prepared/: ClassTemplate.h  KisteTemplate.h  LineTemplate.h
syntax-files/gtksourceview/: kiste.lang
syntax-files/vim/: kiste.vim
tests/: CMakeLists.txt  differ.py
tests/assertions/: CMakeLists.txt  calling_non_void.cpp  calling_non_void.kiste
tests/comparison-based/: CMakeLists.txt  ComparisonBasedTestRunner.cpp  README  escaped_and_raw_output.html.data  escaped_and_raw_output.html.expected  escaped_and_raw_output.html.kiste  generate.py  hello_world.raw.expected  hello_world.raw.kiste
tests/exceptions/: CMakeLists.txt  sample.kiste  test.cpp
tests/template-output/: .gitignore  CMakeLists.txt  hello_world.h.expected  hello_world.kiste  hello_world_with_exc.h.expected  hello_world_with_exc.kiste  hello_world_with_exc.params
vim/syntax/: kiste.vim
